Fix crash when clipboard is not available

Summary:
QClipboard::mimeData() can be nullptr according to documentation.

BUG: 419722
FIXED-IN: 1.8.3

Reviewers: mreeves

Reviewed By: mreeves

Differential Revision: https://phabricator.kde.org/D29248